2007-10-18  Noel O'Boyle <baoilleach@gmail.com>

	* scripts/Makefile.am: The dl Python module is not present on (many?)
	64-bit systems, so it falls back to the DLFCN module which hopefully
	*is* present. I would appreciate if someone could rerun the toolchain
	and check in Makefile.in.

2007-10-15  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* include/openbabel/forcefield.h: New LineSearch() method to
	update a step over the entire molecule's coordinates at once. Much
	faster, since it drastically minimizes the number of energy
	evaluations.

	* src/forcefield.cpp: Implement above, plus switch SteepestDescent
	and ConjugateGradients to use it.

	* include/openbabel/mol.h, src/mol.cpp: Add SetCoordinates() call
	to set the entire coordinate system at once.

2007-10-15  Chris Morley
	
	* src/babel.cpp, src/nbabel.cpp: The last commit gave incorrect
	error messages. Correct this, add Read or Write only to output
	from Hxxx and make both Hxxx and H xxx acceptable.

2007-10-15  Chris Morley
	
	* src/babel.cpp, src/nbabel.cpp: Abort and error message when
	SetInAndOutFormats fails. Fixes bug #1813493
	
2007-10-14  Chris Morley

	* src/fingerprints/finger3.cpp, src/formats/fingerprintformat.cpp
	Change format for -xs format again: functional groups tab 
	separated. Suggested by Chris Swain.

2007-10-11  Chris Morley

	* src/format/mdlformat.cpp: Remove warning about incorrect title
	line which is sometimes output when it should not be, bug#1752435
	
	(ParseAliasText) ignore alias blocks with just "?" Suggestion by
	Rajarshi Guha
	
	* src/fingerprints/finger3.cpp, src/formats/fingerprintformat.cpp:
	Slight change in output formatting for -xs and -xu options
	
	* src/formats/xml/cmlformat.cpp: still trying to deallocate
	strings supplied by libxml2. Should be using free (not delete)
	but still not working with my compiler so still commented out.

2007-10-08  Geoffrey Hutchison  <babel@geoffhutchison.net>
